--- a/finance/expense.html
+++ b/finance/expense.html
@@ -2,14 +2,45 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>大公盘</title>
+    <!-- core CSS -->
+    <!--<link href="../resources/tpgd/css/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" type="text/css" href="../resources/bootstrap-3.3.5/css/bootstrap.min.css">
+    <link href="../resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/main.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/responsive.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/owl.carousel.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/owl.theme.css" rel="stylesheet">
+
+    <link href="../resources/layer/skin/layer.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <script src="../resources/js/jquery-1.10.1.min.js"></script>
+    <script src="../resources/js/common.js?time=new Date()"></script>
+    <script src="../resources/js/common/head.js?time=new Date()"></script>
+
+    <script type="text/javascript" src="../resources/tpgd/js/bootstrap.min.js"></script>
+    <!--<script type="text/javascript" src="../resources/tpgd/js/jquery.prettyPhoto.js"></script>-->
+    <script type="text/javascript" src="../resources/tpgd/js/jquery.isotope.min.js"></script>
+    <script type="text/javascript" src="../resources/tpgd/js/owl.carousel.js"></script>
+    <script type="text/javascript" src="../resources/tpgd/js/main.js"></script>
+    <script type="text/javascript" src="../resources/layer/layer.js"></script>
+    <link rel="stylesheet" type="text/css" href="../resources/css/house_info/list.css"/>
+
     <link rel="stylesheet" type="text/css" href="../resources/dataTables/media/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css"
           href="../resources/dataTables/extensions/FixedHeader/css/fixedHeader.dataTables.css">
 
+
     <script type="text/javascript" src="../resources/js/jquery-1.10.1.min.js"></script>
-    <script type="text/javascript" src="../resources/js/Calendar.js"></script>
     <script type="text/javascript" src="../resources/js/common.js"></script>
+    <script type="text/javascript" src="../resources/layer/layer.js"></script>
+    <script type="text/javascript" src="../resources/js/jquery.lSelect.js"></script>
+
     <script type="text/javascript" src="../resources/dataTables/media/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript"
             src="../resources/dataTables/extensions/FixedHeader/js/dataTables.fixedHeader.min.js"></script>
@@ -34,12 +65,41 @@
 
 </head>
 <body>
+<header id="header">
+    <nav class="navbar navbar-inverse" role="banner">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="sr-only">Toggle navigation</span> <span
+                        class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
+                <a class="navbar-brand" href="../index.html"><i class="fa fa-sun-o"></i> 我要查房</a></div>
+            <div class="collapse navbar-collapse navbar-right">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="../index.html">主页</a></li>
+                    <li><a href="../about.html">联系我们</a></li>
+                    <li><a href="../house_info/list-table.html">有效房源</a></li>
+                    <li><a href="../house_info/list-table.html?type=new">最新房源</a></li>
+                    <li><a href="property.html">物业查询</a></li>
+                    <li><a href="../index.html#personal">个人中心</a></li>
+                    <li>
+                        <div class="part1" style="display:none ">
+                            <a href="../login.html" target="_top">登录/注册</a>
+                        </div>
+
+                        <div class="part2" style="display:none ">
+                            <span id="testId">欢迎您，</span><span class="user"></span>
+                            <span class="btn btn-warning exit">退出</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
 <div class="main">
 
-
     <div class="container">
-
-        <div class="row">
+        <div class="row" style="margin-top: 30px;">
             <div class="col-md-12">
                 <span class="box-bill-title">可用金额(元):</span>
                 <span class="box-bill-foot-account">
